= MagLev Change Log

  For more precise details see: http://bit.ly/d3C6S1

== Unreleased Changes

== Changes for 24906 2010-12-21
* "maglev-gem pristine <gem>" now installs $MAGLEV_HOME/bin files with
  proper #!/usr/bin/env line (--env-shebang).
* Minor bugfixes in underlying GemStone 3.0 system

== Changes for 24893 2010-12-20
* Fix problem running minitest 2.0.1
* Add implementation for Kernel#exit!
* Release with first Beta of underlying GemStone 3.0 system

== Changes for 24864 2010-12-14
* No Ruby code changes
* Fix for SEGV in Socket code on Mac OS X in underlying GemStone 3.0 system

== Changes for 24854 2010-12-13
* Fix Trac 822, 823 which resolves:
  A couple of problems in Tilt and HAML
  AST->IR problem with string interpolation
* Added Gemfiles to Sinatra examples to document tested versions
* Added Haml example (mostly for testing)
* Work in progress on migrations examples
* A few improvements to the underlying GemStone 3.0  system

== Changes for 24811 2010-12-06
* Implement getpeername, getsockname for Ruby Sockets to make pure Ruby EventMachine work
* Fix Trac 818
* More fixes and enhancements to underlying GemStone 3.0  system

== Changes for 24756 2010-11-29
* Added examples/webstack which has code, config and documentation on running MagLev web apps
  with various HTTP servers (nginx, lighttpd, etc.) and using several protocols to talk to the
   webserver (FastCGI, SCGI, HTTP)
* Fix problems in getting source string for a block
* Fix Trac 814, 819, 821
* Implemented new exception hierarchy in underlying GemStone 3.0  system
* Various other fixes and enhancements to underlying GemStone 3.0 system

== Changes for 24610 2010-11-04
* Fixed VSD startup problem
* several other fixes and enhancements to underlying GemStone 3.0  system

== Changes for 24566 2010-11-01

* Fix Trac 806, 808, 811
* Fix problems running the Tilt gem
* Some optimizations to String#<<
* Fixed bug that prevented VSD from running in Snow Leopard