@@ -64,3 +64,4 @@ end
 
 require 'maglev/openssl/digest'
 require 'maglev/openssl/hmac'
+require 'maglev/openssl/random'
